samples/_failures_safe/1761161570_999003_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_453e7fe7.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_453e7fe7.c:161:15: error: expected ‘)’ at end of input
  161 |         if (op
      |            ~  ^
      |               )
./samples/SAFE/__tmp_453e7fe7.c:161:9: error: expected declaration or statement at end of input
  161 |         if (op
      |         ^~
./samples/SAFE/__tmp_453e7fe7.c:161:9: error: expected declaration or statement at end of input
